[project]
name = "boto3-101"
version = "0.1.0"
description = "Learning Python boto3 Library and testing AWS SDK services"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioboto3>=14.1.0",
    "boto3>=1.37.1",
    "matplotlib>=3.10.1",
    "notebook>=7.3.2",
    "paramiko>=3.5.1",
    "pillow>=11.1.0",
    "requests>=2.32.3",
]

[tool.ruff.lint]
ignore = ["E731"]
